# seqspec

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  EXAMPLE.md  LICENSE  MANIFEST.in  Makefile  README.md  TUTORIAL.md  dev-requirements.txt  index.html  main.py  myst.yml  parseYAML.js  pyproject.toml  requirements.txt  seqspec_dev2.ipynb  setup.cfg  setup.py  styles.css
.github/workflows/: ci-test.yml  deploy.yml
assays/: 10x-RNA-ATAC.html  CEL-Seq.html  CEL-Seq2.html  Quartz-seq.html  Quartz-seq2.html  STRT-seq-2i.html  STRT-seq-C1.html  STRT-seq.html  Smart-seq2.html  Smart-seq3.html  sci-RNA-seq.html  template.html  template.yaml
assays/10x-ATAC/: spec.yaml
assays/10x-RNA-5prime/: spec.yaml
assays/10x-RNA-ATAC/: spec.yaml
assays/10x-RNA-v1/: spec.yaml
assays/10x-RNA-v2/: spec.yaml
assays/10x-RNA-v3/: spec.yaml
assays/10xCRISPR/: sgRNA_target_onlist.txt  spec.yaml
assays/10xFB/: spec.yaml
assays/10xFB-3prime/: spec.yaml
assays/10xFB-5prime/: spec.yaml
assays/10xFB-VDJ-5prime/: spec.yaml
assays/BD-Rhapsody-EB/: spec.yaml
assays/BD-Rhapsody-v1/: spec.yaml
assays/CEL-Seq/: spec.yaml
assays/CEL-Seq2/: spec.yaml
assays/Drop-seq/: spec.yaml
assays/ISSAAC-seq/: spec.yaml
assays/Illumina/: nextera_dual_index.yaml  truseq_dual_index.yaml  truseq_single_index.yaml
assays/MARS-seq/: cell_bc_onlist.txt  plate_bc_onlist.txt  spec.yaml
assays/Microwell-seq/: bc1_onlist.txt  bc3_onlist.txt  sample_index.txt  spec.yaml
assays/PIPseqV2/: index7_onlist.txt  spec.yaml
assays/PIPseqV3/: index5_onlist.txt
assays/Pi-ATAC-seq/: spec.yaml
assays/Quartz-seq/: spec.yaml
assays/Quartz-seq2/: spec.yaml
assays/SHARE-seq/: 192_PLATE1_PLATE2_cell_barcodes_onlist.txt  ATAC_i5_onlist.txt  broad-share-spec.yaml  broad_share_spec.yaml  spec.yaml
assays/SPLiT-seq/: bc1_onlist.txt  index7_onlist.txt  spec.yaml
assays/STRT-seq/: spec.yaml
assays/STRT-seq-2i/: spec.yaml
assays/STRT-seq-C1/: spec.yaml
assays/Seq-well/: spec.yaml
assays/Seq-well-S3/: spec.yaml
assays/Smart-seq2/: i7_onlist.txt  spec.yaml
assays/Smart-seq3/: spec.yaml
assays/SureCell/: spec.yaml
assays/Tang2009/: index_onlist.txt  spec.yaml
assays/VASA-seq-drop/: spec.yaml
assays/VASA-seq-plate/: sample_bc_onlist.txt  spec.yaml
assays/inDropv2/: spec.yaml
assays/mcSCRB-seq/: spec.yaml
assays/parse-wt/: barcode-23_onlist.txt  wt-mega-v2.yaml
assays/sci-RNA-seq/: barcode_onlist.txt  spec.yaml
assays/sci-RNA-seq3/: cell_bc_onlist.txt  hairpin_bc_onlist.txt  spec.yaml
assays/scifi-RNA-seq/: spec.yaml
docs/: Assays.js  CHANGELOG.md  CONTRIBUTING.md  DEV_GUIDE.md  DOCUMENTATION.md  INSTALLATION.md  Reads.js  Regions.js  SEQSPEC_DOCUMENTATION.md  SEQSPEC_FILE.md  SEQSPEC_TOOL.md  SEQ_PRIMER.md  SPECIFICATION.md  TUTORIAL.md  TUTORIAL_COMPLEX.md  TUTORIAL_FROM_TEMPLATE.md  TUTORIAL_SIMPLE.md  UNIFORM.ipynb  UNIFORM.md  USING_SEQSPEC.ipynb  USING_SEQSPEC.md  assays.html  builder.html  myst.yml  reads.html  regions.html  seqspec.js  styles.css
docs/assays/: 10x_atac.spec.yaml  10x_rna_5prime.spec.yaml  10x_rna_atac.spec.yaml  10x_rna_atac_multi.spec.yaml  10x_rna_v1.spec.yaml  10x_rna_v2.spec.yaml  10x_rna_v3.spec.yaml  10xcrispr.spec.yaml  10xfb_3prime.spec.yaml  10xfb_5prime.spec.yaml  10xfb_vdj_5prime.spec.yaml  10xv3_scrnaseq_element_adept_truseq_dual.spec.yaml  10xv3_scrnaseq_illumina_truseq_dual.spec.yaml  bd_rhapsody_eb.spec.yaml  bd_rhapsody_v1.spec.yaml  cel_seq.spec.yaml  cel_seq2.spec.yaml  dogmaseq_dig.spec.yaml  dogmaseq_lll.spec.yaml  drop_seq.spec.yaml  element_adept_truseq_dual.spec.yaml  illumina_truseq_dual.spec.yaml  indropv2.spec.yaml  issaac_seq.spec.yaml  mars_seq.spec.yaml  mcscrb_seq.spec.yaml  microwell_seq.spec.yaml  parse_wt_v2.spec.yaml  pi_atac_seq.spec.yaml  pipseqv2.spec.yaml  pipseqv3.spec.yaml  quartz_seq.spec.yaml  quartz_seq2.spec.yaml  sccrispra.spec.yaml  sci_rna_seq.spec.yaml  sci_rna_seq3.spec.yaml  scifi_rna_seq.spec.yaml  seq_well.spec.yaml  seq_well_s3.spec.yaml  share_seq.spec.yaml  (+14 more)
docs/reads/: element_adept_workflow.read.yaml  element_elevate_workflow.read.yaml  (+6 more)
examples/: parse_genbank.ipynb  seqspec-dev.ipynb  seqspec-summaries.ipynb  seqspec.ipynb  seqspec_dev2.ipynb  template.yaml
public/: 10x-ATAC.html  10x-RNA-5prime.html  10x-RNA-ATAC.html  10x-RNA-v1.html  10x-RNA-v2.html  10x-RNA-v3.html  10xCRISPR.html  10xFB-3prime.html  10xFB-5prime.html  10xFB-VDJ-5prime.html  BD-Rhapsody-EB.html  BD-Rhapsody-v1.html  CEL-Seq.html  CEL-Seq2.html  Drop-seq.html  MARS-seq.html  Microwell-seq.html  Pi-ATAC-seq.html  Quartz-seq.html  Quartz-seq2.html  SHARE-seq.html  SPLiT-seq.html  STRT-seq-2i.html  STRT-seq-C1.html  STRT-seq.html  Seq-well-S3.html  Seq-well.html  Smart-seq2.html  Smart-seq3.html  SureCell.html  Tang2009.html  VASA-seq-drop.html  VASA-seq-plate.html  inDropv2.html  index.html  mcSCRB-seq.html  sci-RNA-seq.html  sci-RNA-seq3.html  scifi-RNA-seq.html
schema/: Assay.schema.yaml  Region.schema.yaml
seqspec/: Assay.py  File.py  Protocol.py  Read.py  Region.py  Region.schema.yaml  __init__.py  _core.pyi  llmtools.py  main.py  seqspec.py  seqspec_build.py  seqspec_check.py  seqspec_convert.py  seqspec_diff.py  seqspec_file.py  seqspec_find.py  seqspec_format.py  seqspec_genbank.py  seqspec_index.py  seqspec_info.py  seqspec_init.py  seqspec_insert.py  seqspec_methods.py  seqspec_modify.py  seqspec_onlist.py  seqspec_print.py  seqspec_print_html.py  seqspec_print_utils.py  seqspec_split.py  seqspec_upgrade.py  seqspec_version.py  utils.py
specs/: template.yaml
src/: assay.rs  file.rs  lib.rs  onlist.rs  py_module.rs  read.rs  region.rs  types.rs
tests/: conftest.py  test_assay.py  test_read.py  test_region.py  test_seqspec_check.py  test_seqspec_diff.py  test_seqspec_file.py  test_seqspec_find.py  test_seqspec_format.py  test_seqspec_index.py  test_seqspec_info.py  test_seqspec_init.py  test_seqspec_insert.py  test_seqspec_methods.py  test_seqspec_modify.py  test_seqspec_onlist.py  test_seqspec_print.py  test_seqspec_split.py  test_seqspec_version.py  test_utils.py  tests.py
(+192 files in other folders)
