[package]
name = "seqspec"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pachterlab/seqspec"
description = "Sequencing specification tools (Rust core + PyO3 bindings)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "seqspec"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.25", optional = true, features = ["extension-module", "abi3-py312"] }
pythonize = "0.25.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"


[features]
default = []
python-binding = ["pyo3"]          # enable PyO3 only when building Python wheels

