[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seqspec"
dynamic = ["version"]
description = "A tool for working with sequencing specifications"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sina Booeshaghi", email = "abooesha@caltech.edu" }]
maintainers = [{ name = "Sina Booeshaghi", email = "abooesha@caltech.edu" }]
keywords = ["bioinformatics", "sequencing", "specifications"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema",
    "newick",
    "requests",
    "biopython",
    "packaging",
    # "mcp",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "tox",
    "pre-commit",
    "flake8",
    "build",
    "setuptools_scm>=7.0",
]

[project.urls]
Homepage = "https://github.com/sbooeshaghi/seqspec"
Repository = "https://github.com/sbooeshaghi/seqspec.git"

[project.scripts]
seqspec = "seqspec.main:main"

[tool.setuptools]
packages = ["seqspec"]
package-dir = { "" = "." }

[tool.setuptools.package-data]
"seqspec" = ["schema/*"]

[tool.setuptools_scm]
write_to = "seqspec/__init__.py"
version_scheme = "python-simplified-semver"
local_scheme = "node-and-timestamp"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=seqspec"

[tool.coverage.run]
source = ["seqspec"]
omit = ["tests/*"]

[tool.flake8]
exclude = [".git", ".github", "__pycache__", "build", "dist"]
max-line-length = 88
extend-ignore = ["E203", "E501"]

[tool.tox]
env_list = ["py{312,313,314,315}"]
skip_missing_interpreters = true

[tool.tox.env]
commands = ["pytest --cov=seqspec {posargs:tests}"]
deps = ["pytest", "pytest-cov", "matplotlib >= 3.4.0"]
