[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "seqspec"
version = "0.4.0"

description = "A tool for working with sequencing specifications"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Sina Booeshaghi", email = "sinab@berkeley.edu" }]
maintainers = [{ name = "Sina Booeshaghi", email = "sinab@berkeley.edu" }]
keywords = ["bioinformatics", "sequencing", "specifications"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Utilities",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema",
    "newick",
    "requests",
    "biopython",
    "packaging",
    "matplotlib",
    "pydantic",
    "openai-agents>=0.2.8",
    "opentelemetry-sdk>=1.36.0",
    "openinference-instrumentation-openai-agents>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pre-commit",
    "build",
    "ruff",
    "twine",
]

[project.urls]
Homepage = "https://pachterlab.github.io/seqspec/"
Repository = "https://github.com/pachterlab/seqspec.git"

[project.scripts]
seqspec = "seqspec.main:main"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["seqspec", "seqspec.*"]

[tool.setuptools.package-data]
"seqspec" = ["schema/*", "py.typed", "_core.pyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=seqspec"

[tool.coverage.run]
source = ["seqspec"]
omit = ["tests/*"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".venv",
  ".mypy_cache",
  ".github",
  "examples",
  "tests"
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E203"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pre-commit>=4.2.0",
    "build>=1.0.0",
    "ruff>=0.9.0",
]


[tool.maturin]
# Build the PyO3 module named *seqspec* (matches #[pymodule] above)
module-name = "seqspec._core"
features = ["python-binding"]
python-source = "."   # ship python/seqspec/* alongside the native module